--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,4 @@
-.run-footer{
+.rune-footer{
 	padding: 60px 0;
 	font-size: 20px;
 	position: relative;
@@ -98,5 +98,39 @@
 				}
 			}
 		}
+	}
+}
+
+.scroll-top{
+	width: 112px;
+	height: 112px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid var(--white-color);
+	transition: all .25s ease-in-out;
+	margin-top: 37px;
+	margin-left: auto;
+	img{
+		transition: all .25s ease-in-out;
+	}
+	&:hover{
+		background-color: var(--white-color);
+		img{
+			filter: brightness(0);
+		}
+	}
+	@include lg-down{
+		width: 44px;
+		height: 44px;
+		img{
+			height: 50%;
+		}
+	}
+	@include md-down{
+		margin-bottom: 50px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
