--- a/css/app.css
+++ b/css/app.css
@@ -693,6 +693,127 @@ input {
   max-width: 940px;
 }
 
+.rune-calc-result {
+  margin-top: calc(var(--index) * 6);
+}
+@media (min-width: 1280px) {
+  .rune-calc-result {
+    margin-top: 165px;
+  }
+}
+
+.runes-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: calc(var(--index) * 4) 0;
+}
+@media (min-width: 1280px) {
+  .runes-wrapper {
+    margin: 70px 0 80px;
+  }
+}
+@media (max-width: 768px) {
+  .runes-wrapper {
+    display: block;
+    margin: 45px 0;
+  }
+}
+.runes-item {
+  text-align: center;
+}
+@media (max-width: 640px) {
+  .runes-item {
+    margin-bottom: 43px;
+  }
+}
+.runes-item h4 {
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: calc(var(--index) * 1.3);
+  line-height: 1.2;
+  margin-bottom: 30px;
+}
+@media (min-width: 1280px) {
+  .runes-item h4 {
+    font-size: 40px;
+  }
+}
+@media (max-width: 640px) {
+  .runes-item h4 {
+    margin-bottom: 24px;
+    font-size: 14px;
+  }
+}
+.runes-item img {
+  border-radius: 22px;
+  margin-bottom: 21px;
+}
+.runes-item h5 {
+  font-weight: 300;
+  margin-bottom: 15px;
+  font-size: calc(var(--index) * 1.3);
+}
+@media (min-width: 1280px) {
+  .runes-item h5 {
+    font-size: 48px;
+  }
+}
+@media (max-width: 768px) {
+  .runes-item h5 {
+    font-size: 14px;
+  }
+}
+@media (max-width: 640px) {
+  .runes-item h5 {
+    margin-bottom: 9px;
+  }
+}
+.runes-item small {
+  font-size: 27px;
+  font-weight: 300;
+}
+@media (max-width: 1024px) {
+  .runes-item small {
+    font-size: 14px;
+  }
+}
+@media (max-width: 640px) {
+  .runes-item small {
+    font-size: 10px;
+  }
+}
+
+.rune-video-player {
+  max-width: 1135px;
+  aspect-ratio: 16/9;
+  background: #000;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+.rune-video-player iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.rune-video-player button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
 .circle {
   position: relative;
   border-radius: 50%;
@@ -790,6 +911,85 @@ input {
   left: 50%; /* Положение третьей точки слева */
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+}
+
+.spoiler__intro {
+  text-align: center;
+  margin-bottom: calc(var(--index) * 3.2);
+}
+@media (min-width: 1280px) {
+  .spoiler__intro {
+    margin-bottom: 70px;
+  }
+}
+.spoiler__btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  text-transform: uppercase;
+  font-family: var(--heading-font-family), sans-serif;
+  font-weight: 400;
+  font-size: calc(var(--index) * 1.3);
+  gap: calc(var(--index));
+}
+@media (min-width: 1280px) {
+  .spoiler__btn {
+    font-size: 41px;
+    gap: 22px;
+  }
+}
+@media (max-width: 640px) {
+  .spoiler__btn {
+    font-size: 14px;
+  }
+}
+.spoiler__btn img {
+  -webkit-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+  height: calc(var(--index) * 1.2);
+}
+@media (min-width: 1280px) {
+  .spoiler__btn img {
+    height: 40px;
+  }
+}
+.spoiler__content {
+  max-height: 0;
+  overflow: hidden;
+  will-change: max-height;
+  -webkit-transition: all 0.25s ease-out;
+  transition: all 0.25s ease-out;
+  opacity: 0;
+}
+.spoiler__content h4 {
+  font-size: calc(var(--index) * 1.3);
+  margin-bottom: calc(var(--index) * 1.5);
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.spoiler__content h4:not(:first-child) {
+  margin-top: calc(var(--index) * 2.2);
+}
+@media (min-width: 1280px) {
+  .spoiler__content h4 {
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+  .spoiler__content h4:not(:first-child) {
+    margin-top: 50px;
+  }
+}
+.spoiler.spoiler__active .spoiler__content {
+  opacity: 1;
 }
 
 .rune-footer {
@@ -982,7 +1182,7 @@ input {
 }
 @media (max-width: 768px) {
   .scroll-top {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
   }
