--- a/scss/_form-calc.scss
+++ b/scss/_form-calc.scss
@@ -259,3 +259,98 @@
 		}
 	}
 }
+
+.rune-calc-result{
+	margin-top: calc(var(--index) * 6);
+	@include xl-up{
+		margin-top: 165px;
+	}
+}
+
+.runes{
+	&-wrapper{
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 20px;
+		margin: calc(var(--index) * 4) 0;
+		@include xl-up{
+			margin: 70px 0 80px;
+		}
+		@include md-down{
+			display: block;
+			margin: 45px 0;
+		}
+	}
+	&-item{
+		text-align: center;
+		@include sm-down{
+			margin-bottom: 43px;
+		}
+		h4{
+			font-weight: 600;
+			text-transform: uppercase;
+			font-size: calc(var(--index) * 1.3);
+			line-height: 1.2;
+			margin-bottom: 30px;
+			@include xl-up{
+				font-size: 40px;
+			}
+			@include sm-down{
+				margin-bottom: 24px;
+				font-size: 14px;
+			}
+		}
+		img{
+			border-radius: 22px;
+			margin-bottom: 21px;
+		}
+		h5{
+			font-weight: 300;
+			margin-bottom: 15px;
+			font-size: calc(var(--index) * 1.3);
+			@include xl-up{
+				font-size: 48px;
+			}
+			@include md-down{
+				font-size: 14px;
+			}
+			@include sm-down{
+				margin-bottom: 9px;
+			}
+		}
+		small{
+			font-size: 27px;
+			font-weight: 300;
+			@include lg-down{
+				font-size: 14px;
+			}
+			@include sm-down{
+				font-size: 10px;
+			}
+		}
+	}
+}
+
+.rune-video-player{
+	max-width: 1135px;
+	aspect-ratio: 16 / 9;
+	background: #000;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	iframe{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+	}
+	button{
+		background-color: transparent;
+		outline: none;
+		border: none;
+		cursor: pointer;
+	}
+}
