--- a/scss/_form-calc.scss
+++ b/scss/_form-calc.scss
@@ -301,7 +301,6 @@
 			}
 		}
 		img{
-			border-radius: 22px;
 			margin-bottom: 21px;
 		}
 		h5{
@@ -346,6 +345,7 @@
 		height: 100%;
 		top: 0;
 		left: 0;
+		z-index: 100;
 	}
 	button{
 		background-color: transparent;
