--- a/css/app.css
+++ b/css/app.css
@@ -746,7 +746,6 @@ input {
   }
 }
 .runes-item img {
-  border-radius: 22px;
   margin-bottom: 21px;
 }
 .runes-item h5 {
@@ -806,6 +805,7 @@ input {
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 100;
 }
 .rune-video-player button {
   background-color: transparent;
@@ -915,12 +915,6 @@ input {
 
 .spoiler__intro {
   text-align: center;
-  margin-bottom: calc(var(--index) * 3.2);
-}
-@media (min-width: 1280px) {
-  .spoiler__intro {
-    margin-bottom: 70px;
-  }
 }
 .spoiler__btn {
   display: -webkit-inline-box;
@@ -940,6 +934,10 @@ input {
   font-weight: 400;
   font-size: calc(var(--index) * 1.3);
   gap: calc(var(--index));
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 @media (min-width: 1280px) {
   .spoiler__btn {
@@ -990,6 +988,12 @@ input {
 }
 .spoiler.spoiler__active .spoiler__content {
   opacity: 1;
+  margin: calc(var(--index) * 3.2) 0;
+}
+@media (min-width: 1280px) {
+  .spoiler.spoiler__active .spoiler__content {
+    margin: 70px 0;
+  }
 }
 
 .rune-footer {
