--- a/css/app.css
+++ b/css/app.css
@@ -26,7 +26,7 @@ body {
 body {
   background-color: var(--bg-color);
   font-family: var(--body-font-family), sans-serif;
-  line-height: auto;
+  line-height: 1.3;
   font-weight: 300;
   min-width: 320px;
   overflow-x: hidden;
@@ -208,6 +208,74 @@ input {
   text-transform: uppercase;
 }
 
+select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  cursor: pointer;
+}
+select option {
+  color: #000;
+  display: block;
+  padding: 10px;
+}
+
+.custom-select {
+  position: relative;
+  width: 100%;
+}
+.custom-select::after {
+  content: "";
+  position: absolute;
+  height: calc(var(--index));
+  width: calc(var(--index) * 0.7);
+  background-image: url(../img/icons/arrow-up.svg);
+  background-size: cover;
+  top: 50%;
+  right: calc(var(--index) * 2.4);
+  -webkit-transform: translateY(-50%) rotate(-180deg);
+          transform: translateY(-50%) rotate(-180deg);
+  z-index: 10;
+}
+@media (min-width: 1280px) {
+  .custom-select::after {
+    right: 50px;
+    height: 34px;
+    width: 10px;
+  }
+}
+@media (max-width: 640px) {
+  .custom-select::after {
+    right: calc(var(--index) * 1.2);
+  }
+}
+
+[type=date] {
+  background: rgba(238, 238, 238, 0.51) url(../img/icons/date-icon.svg) 97% 50% no-repeat;
+}
+@media (max-width: 1024px) {
+  [type=date] {
+    background-size: 7%;
+  }
+}
+
+[type=date]::-webkit-inner-spin-button {
+  display: none;
+}
+
+[type=date]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
+
+.mobile-element {
+  display: none;
+}
+@media (max-width: 768px) {
+  .mobile-element {
+    display: inline-block;
+  }
+}
+
 .badge {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -356,6 +424,14 @@ input {
     font-size: 10px;
   }
 }
+.rune-header b {
+  font-weight: 300;
+}
+@media (max-width: 768px) {
+  .rune-header b {
+    font-weight: 600;
+  }
+}
 
 .rune-calc-section-bg {
   position: absolute;
@@ -400,7 +476,7 @@ input {
     margin-bottom: 14px;
   }
 }
-.rune-calc-form input {
+.rune-calc-form input, .rune-calc-form select {
   width: 100%;
 }
 .rune-calc-form .btn {
