--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,46 @@
 @charset "UTF-8";
+@font-face {
+  src: url("../fonts/NeutralFace.woff2") format("woff2");
+  font-family: "Neutral Face";
+  font-style: normal;
+  font-weight: 400;
+  font-display: "swap";
+}
+@font-face {
+  src: url("../fonts/OpenSans-Light.woff2") format("woff2");
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 300;
+  font-display: "swap";
+}
+@font-face {
+  src: url("../fonts/OpenSans-LightItalic.woff2") format("woff2");
+  font-family: "Open Sans";
+  font-style: italic;
+  font-weight: 300;
+  font-display: "swap";
+}
+@font-face {
+  src: url("../fonts/OpenSans-Regular.woff2") format("woff2");
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-display: "swap";
+}
+@font-face {
+  src: url("../fonts/OpenSans-SemiBold.woff2") format("woff2");
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-display: "swap";
+}
+@font-face {
+  src: url("../fonts/OpenSans-Bold.woff2") format("woff2");
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-display: "swap";
+}
 * {
   margin: 0;
   padding: 0;
@@ -251,6 +293,9 @@ select option {
 }
 
 [type=date] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   background: rgba(238, 238, 238, 0.51) url(../img/icons/date-icon.svg) 97% 50% no-repeat;
 }
 @media (max-width: 1024px) {
