upd video play-btn on mobile device

--- a/css/app.css
+++ b/css/app.css
@@ -934,6 +934,11 @@ select option {
   border: none;
   cursor: pointer;
 }
+@media (max-width: 768px) {
+  .rune-video-player button {
+    max-width: 60px;
+  }
+}
 
 .circle {
   position: relative;
