--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -8,6 +8,9 @@
 	}
 }
 
+@mixin xs-down {
+	@media (max-width: 360px) { @content; }
+}
 @mixin sm-down {
 	@media (max-width: 640px) { @content; }
 }
