--- a/css/app.css
+++ b/css/app.css
@@ -68,7 +68,7 @@ body {
 body {
   background-color: var(--bg-color);
   font-family: var(--body-font-family), sans-serif;
-  line-height: 1.3;
+  line-height: 1.35;
   font-weight: 300;
   min-width: 320px;
   overflow-x: hidden;
@@ -81,7 +81,7 @@ body {
 }
 @media (max-width: 640px) {
   body {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
 body p {
@@ -201,7 +201,7 @@ section h2 > span {
 }
 @media (max-width: 640px) {
   .btn {
-    font-size: 11px;
+    font-size: 12px;
   }
 }
 
@@ -412,6 +412,11 @@ select option {
     font-size: calc(var(--index) * 3.62);
     line-height: 1;
     margin-bottom: calc(var(--index) * 2.75);
+  }
+}
+@media (max-width: 360px) {
+  .rune-header h1 {
+    font-size: 30px;
   }
 }
 .rune-header-img {
@@ -662,7 +667,7 @@ select option {
 }
 @media (max-width: 640px) {
   .rune-calc-section-descr-item {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
 @media (max-width: 768px) {
@@ -702,6 +707,12 @@ select option {
     font-size: 26px;
   }
 }
+@media (max-width: 640px) {
+  .rune-calc-section-descr-item h3 {
+    font-size: 13px;
+    margin-bottom: 5px;
+  }
+}
 .rune-calc-section-descr-item em {
   position: relative;
   padding-bottom: 10px;
@@ -712,6 +723,7 @@ select option {
   .rune-calc-section-descr-item em {
     padding-bottom: 5px;
     margin-bottom: 12px;
+    font-size: 12px;
   }
 }
 .rune-calc-section-descr-item em::after {
@@ -770,7 +782,7 @@ select option {
 }
 @media (max-width: 768px) {
   .rune-calc-section-descr-end {
-    margin: 70px 0 80px;
+    margin: 70px 0 0;
   }
   .rune-calc-section-descr-end img {
     margin-top: 50px;
@@ -804,7 +816,7 @@ select option {
 }
 @media (max-width: 640px) {
   .rune-calc-section-descr-end .text-block {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
 .rune-calc-section-descr-end .text-block p:first-child {
@@ -836,17 +848,17 @@ select option {
 }
 @media (max-width: 768px) {
   .runes-wrapper {
-    display: block;
     margin: 45px 0;
+    gap: 10px;
+  }
+}
+@media (max-width: 640px) {
+  .runes-wrapper {
+    gap: 10px;
   }
 }
 .runes-item {
   text-align: center;
-}
-@media (max-width: 640px) {
-  .runes-item {
-    margin-bottom: 43px;
-  }
 }
 .runes-item h4 {
   font-weight: 600;
@@ -862,12 +874,23 @@ select option {
 }
 @media (max-width: 640px) {
   .runes-item h4 {
-    margin-bottom: 24px;
-    font-size: 14px;
+    min-height: 32px;
+    margin-bottom: 10px;
+    font-size: 13px;
   }
 }
 .runes-item img {
   margin-bottom: 21px;
+}
+@media (max-width: 768px) {
+  .runes-item img {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 640px) {
+  .runes-item img {
+    margin-bottom: 5px;
+  }
 }
 .runes-item h5 {
   font-weight: 300;
@@ -882,11 +905,18 @@ select option {
 @media (max-width: 768px) {
   .runes-item h5 {
     font-size: 14px;
+    margin-bottom: 5px;
   }
 }
 @media (max-width: 640px) {
   .runes-item h5 {
-    margin-bottom: 9px;
+    margin-bottom: 12px;
+  }
+}
+@media (max-width: 360px) {
+  .runes-item h5 {
+    font-size: 12px;
+    margin-bottom: 5px;
   }
 }
 .runes-item small {
@@ -895,10 +925,15 @@ select option {
 }
 @media (max-width: 1024px) {
   .runes-item small {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 @media (max-width: 640px) {
+  .runes-item small {
+    font-size: 12px;
+  }
+}
+@media (max-width: 360px) {
   .runes-item small {
     font-size: 10px;
   }
@@ -990,6 +1025,11 @@ select option {
 }
 @media (max-width: 768px) {
   .circle .label {
+    font-size: 12px;
+  }
+}
+@media (max-width: 360px) {
+  .circle .label {
     font-size: 10px;
   }
 }
@@ -999,7 +1039,12 @@ select option {
 }
 @media (max-width: 640px) {
   .circle .top {
-    left: -30%;
+    left: -45%;
+  }
+}
+@media (max-width: 360px) {
+  .circle .top {
+    left: -35%;
   }
 }
 .circle .right {
@@ -1007,6 +1052,11 @@ select option {
   top: 25%;
 }
 @media (max-width: 640px) {
+  .circle .right {
+    right: -57%;
+  }
+}
+@media (max-width: 360px) {
   .circle .right {
     right: -45%;
   }
@@ -1205,7 +1255,7 @@ select option {
 }
 @media (max-width: 640px) {
   .rune-footer-links {
-    font-size: 10px;
+    font-size: 12px;
   }
 }
 .rune-footer-right {
