--- a/scss/_form-calc.scss
+++ b/scss/_form-calc.scss
@@ -292,8 +292,16 @@
 	}
 	&-item{
 		text-align: center;
+		display: flex;
+		flex-direction: column;
 		@include sm-down{
 			// margin-bottom: 43px;
+		}
+		&-info{
+			flex-grow: 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
 		}
 		h4{
 			font-weight: 600;
