--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -30,7 +30,10 @@ body{
 	overflow-x: hidden;
 	color: var(--white-color);
 	@include xl-up{
-		font-size: 27px;
+		font-size: 20px;
+	}
+	@include xl-down{
+		font-size: 16px;
 	}
 	@include sm-down{
 		font-size: 12px;
@@ -38,9 +41,9 @@ body{
 	p{
 		text-align: justify;
 		&:not(:last-child){
-			margin-bottom: 20px;
+			margin-bottom: 15px;
 			@include sm-down{
-				margin-bottom: 15px;
+				margin-bottom: 10px;
 			}
 		}
 	}
