--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,49 +1,51 @@
 .rune-header{
-	padding: calc(var(--index) * 2.2) 0;
-	@include xl-up{
-		padding: 60px 0 40px 0;
-	}
+	padding: 40px 0 40px 0;
 	.badge{
-		margin-bottom: calc(var(--index) * 2);
-		@include xl-up{
-			margin-bottom: 30px;
+		margin-bottom: 30px;
+		@include sm-down{
+			margin-bottom: 15px;
 		}
 	}
+	@include md-down{
+		padding: 30px 0 0px;
+	}
 	h1{
-		font-size: 92px;
+		font-size: 80px;
 		text-transform: uppercase;
-		line-height: 80px;
+		line-height: 1;
 		font-family: var(--heading-font-family), sans-serif;
 		font-weight: 400;
-		margin-bottom: 50px;
+		margin-bottom: 30px;
 		display: block;
 		> span{
 			display: block;
-			font-size: 80px;
+			font-size: 70px;
 			@include xl-down{
 				font-size: inherit;
 			}
 			@include sm-down{
-				display: flex;
-				justify-content: end;
+				// display: flex;
+				// justify-content: end;
 				span{
-					width: min-content;
+					// width: min-content;
 				}
 			}
 		}
 		@include xl-down{
-			font-size: calc(var(--index) * 3.62);
-			line-height: 1;
-			margin-bottom: calc(var(--index) * 2.75);
+			font-size: 60px;
 		}
-		@include xs-down{
+		@include lg-down{
+			font-size: 40px;
+			margin-bottom: 20px;
+		}
+		@include sm-down{
 			font-size: 30px;
 		}
 	}
 	&-img{
-		margin-bottom: 90px;
-		@include xl-down{
-			margin-bottom: calc(var(--index) * 5);
+		margin-bottom: 40px;
+		@include md-down{
+			margin-bottom: 20px;
 		}
 		img{
 			display: block;
@@ -53,7 +55,7 @@
 	&-btn{
 		position: absolute;
 		right: 0;
-		bottom: -50px;
+		bottom: -20px;
 
 		border: none;
 		outline: none;
@@ -63,12 +65,13 @@
 		text-transform: uppercase;
 		font-weight: bold;
 		letter-spacing: 0.02em;
+		font-size: 16px;
 
 		display: inline-flex;
 		align-items: center;
 		justify-content: center;
-		width: 282px;
-		height: 282px;
+		width: 180px;
+		height: 180px;
 		border-radius: 100%;
 		background-color: rgba(255, 255, 255, 0.27);
 		backdrop-filter: blur(16.85px);
@@ -77,11 +80,20 @@
 			background-color: var(--accent-color);
 		}
 		@include xl-down{
-			width: calc(var(--index) * 8.1);
-			height: calc(var(--index) * 8.1);
+			width: 150px;
+			height: 150px;
+		}
+		@include lg-down{
+			width: 120px;
+			height: 120px;
+			font-size: 12px;
 		}
 		@include md-down{
-			font-size: 10px;
+			width: 70px;
+			height: 70px;
+			font-size: 8px;
+			right: 10px;
+			bottom: 10px;
 		}
 	}
 	b{
