--- a/scss/_form-calc.scss
+++ b/scss/_form-calc.scss
@@ -9,22 +9,26 @@
 }
 
 .rune-calc-form{
-	border: 1.37207px solid var(--white-color);
-	max-width: 95%;
-	margin: 0 auto calc(var(--index) * 1.3);
+	border: 1px solid var(--white-color);
+	// max-width: 95%;
+	margin-bottom: 60px;
 	border-radius: 4.1162px;
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
 	background: rgba(252, 252, 252, 0.03);
-	padding: calc(var(--index) * 2.7) calc(var(--index) * 1.8);
-	gap: calc(var(--index) * 1.35);
-	@include xl-up{
-		gap: 27px;
-		padding: 60px 90px;
-		margin-bottom: 80px;
+	padding: 40px;
+	gap: 25px;
+	@include xl-down{
+		padding: 20px;
+		gap: 20px;
+	}
+	@include lg-down{
+		display: flex;
+		flex-direction: column;
 	}
 	@include md-down{
 		max-width: 100%;
+		gap: 15px;
 	}
 	@include sm-down{
 		margin-bottom: 14px;
@@ -33,16 +37,18 @@
 		width: 100%;
 	}
 	.btn{
-		margin-top: calc(var(--index) * 2.2);
-		@include xl-up{
-			margin-top: 60px;
+		height: 55px;
+		margin-top: auto;
+		@include lg-down{
+			margin-top: 10px;
 		}
 	}
 	.agree{
 		font-weight: 300;
-		font-size: calc(var(--index) * 0.85);
-		@include xl-up{
-			font-size: 20px;
+		font-size: 14px;
+		grid-column: span 2;
+		@include sm-down{
+			font-size: 12px;
 		}
 		a{
 			color: var(--white-color);
@@ -57,14 +63,21 @@
 .rune-form-group{
 	display: flex;
 	flex-direction: column;
-	gap: calc(var(--index) * 1.2);
-	@include xl-up{
-		gap: 25px;
+	gap: 15px;
+	@include lg-down{
+		gap: 10px;
 	}
 	label{
 		text-transform: uppercase;
 		font-family: var(--heading-font-family), sans-serif;
 		line-height: 1;
+		font-size: 16px;
+		@include lg-down{
+			font-size: 14px;
+		}
+		@include sm-down{
+			font-size: 12px;
+		}
 	}
 }
 
