--- a/scss/_form-calc.scss
+++ b/scss/_form-calc.scss
@@ -89,6 +89,13 @@
 		transform: translateY(0);
 		margin-top: 17%;
 	}
+	&-bg{
+		max-width: 600px;
+		width: 100%;
+		@include md-down{
+			max-width: 60%;
+		}
+	}
 }
 
 .rune-calc-section-text-block{
@@ -245,6 +252,12 @@
 	align-items: center;
 	justify-content: space-between;
 	position: relative;
+	img{
+		max-width: 40%;
+		@include lg-down{
+			max-width: 100%;
+		}
+	}
 	@include md-down{
 		margin: 70px 0 0;
 		img{
@@ -310,7 +323,7 @@
 		br{
 			display: none;
 		}
-		@include sm-down{
+		@include md-down{
 			br{
 				display: block;
 			}
@@ -324,11 +337,14 @@
 		h4{
 			font-weight: 600;
 			text-transform: uppercase;
-			font-size: calc(var(--index) * 1.3);
+			font-size: 32px;
 			line-height: 1.2;
-			margin-bottom: 30px;
-			@include xl-up{
-				font-size: 40px;
+			margin-bottom: 20px;
+			@include xl-down{
+				font-size: 24px;
+			}
+			@include md-down{
+				font-size: 20px;
 			}
 			@include sm-down{
 				min-height: 32px;
@@ -347,10 +363,10 @@
 		}
 		h5{
 			font-weight: 300;
-			margin-bottom: 15px;
-			font-size: calc(var(--index) * 1.3);
-			@include xl-up{
-				font-size: 48px;
+			margin-bottom: 10px;
+			font-size: 28px;
+			@include lg-down{
+				font-size: 20px;
 			}
 			@include md-down{
 				font-size: 14px;
@@ -365,7 +381,7 @@
 			}
 		}
 		small{
-			font-size: 27px;
+			// font-size: 27px;
 			font-weight: 300;
 			@include lg-down{
 				font-size: 12px;
