--- a/scss/_form-calc.scss
+++ b/scss/_form-calc.scss
@@ -149,9 +149,9 @@
 	&-item{
 		padding: calc(var(--index) * 1.2) calc(var(--index));
 		position: relative;
+		font-size: 18px;
 		@include xl-up{
-			padding: 50px 20px;
-			font-size: 21px;
+			padding: 20px 20px;
 			font-weight: 300;
 		}
 		@include lg-down{
@@ -182,14 +182,14 @@
 			}
 		}
 		h3{
-			font-size: 26px;
+			// font-size: 26px;
 			text-transform: uppercase;
 			font-weight: 600;
 			margin-bottom: 2px;
-			font-size: calc(var(--index) * 1.1);
+			// font-size: calc(var(--index) * 1.1);
 			line-height: 1.2;
 			@include xl-up{
-				font-size: 26px;
+				// font-size: 26px;
 			}
 			@include sm-down{
 				font-size: 13px;
@@ -201,6 +201,7 @@
 			padding-bottom: 10px;
 			margin-bottom: 20px;
 			display: block;
+			font-size: 16px;
 			@include sm-down{
 				padding-bottom: 5px;
 				margin-bottom: 12px;
